# aws-transit-gateway-hub

./: .gitignore  Pulumi.yaml  README.md  ROUTING_CONFIG.txt  __main__.py  networking.py  pyproject.toml  tgw.py  vpc.py
docs/: TRANSIT_GATEWAY_to_VPC.txt
