[project]
name = "aws-transit-gateway-hub"
version = "1.0.0"
description = "AWS Transit Gateway hub-and-spoke architecture with Pulumi"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Scott Penry", email = "scottpenry@comcast.net"}
]
keywords = [
    "aws",
    "transit-gateway",
    "networking",
    "pulumi",
    "infrastructure-as-code",
    "hub-and-spoke",
    "multi-vpc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pulumi>=3.0.0",
    "pulumi-aws>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/Sparty-5A/aws-transit-gateway-hub"
Repository = "https://github.com/Sparty-5A/aws-transit-gateway-hub"
Documentation = "https://github.com/Sparty-5A/aws-transit-gateway-hub#readme"
Issues = "https://github.com/Sparty-5A/aws-transit-gateway-hub/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]